@@ -1,3 +1,12 @@
+2008-08-28 Jens Tkotz <jens@peino.de> 1.5.9-svn-b13
+
+ * Fix: Link to comments overview on mainpage.
+
+ * Fix: getCaptionDate when using exiftags.
+        Use "Image Generated" first, then "Image Created".
+
+ * Change: Some Layout fixes.
+
 2008-08-28 Jens Tkotz <jens@peino.de> 1.5.9-svn-b12
 
  * FIX: unhtmlentities() changed 0 values to '',
